kube_manifest/00_namespace.yml
kind: Namespace
apiVersion: v1
metadata:
    name: zipper
    labels:
        name: zipper
