kube_manifest/07_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hello-ingress
    namespace: zipper
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
      - host: "arch.homework"
        http:
            paths:
              - path: /otusapp/sadmitriev/(.*)
                pathType: Prefix
                backend:
                    service:
                        name: my-wsdb-service
                        port:
                            number: 8000
              - path: /payments/(.*)
                pathType: Prefix
                backend:
                    service:
                        name: payments-service
                        port:
                            number: 8010
